--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
 			<artifactId>springdoc-openapi-webmvc-core</artifactId>
 			<version>1.6.3</version> <!-- Use the latest compatible version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
